media query WIP fixed other spacing and collapsing issues between section img and info

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -262,19 +262,17 @@ section {
 }
 
 .events {
-    display: flex; 
-    flex-direction: row;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    gap: 10rem;
     padding: 2rem 6rem;
     margin: 0 5rem;
-    flex-wrap: wrap;
-    gap: 10rem;
-    margin-bottom: 10rem; 
 }
 
 .event-img {
-    width: 30%;
+    width: 30rem;
     height: 38rem;
     img {
         width: 100%;
@@ -284,15 +282,15 @@ section {
 }
 
 .event-info {
-    width: 70%;
-    padding-right: 17rem;
     flex: 1;
+    max-width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-end;
-    text-align: right;
+    align-items: flex-start;
+    text-align: left;
     color: #0D1B2A;
+    padding: 1rem;
 }
 
 .event-info ul {
@@ -431,11 +429,12 @@ section {
     justify-items: center;
     align-items: center;
     gap: 20rem;
+    margin: 0 auto;
+    padding: 2rem 6rem;
 }
 
 .get-in-touch {
     width: 50%;
-    padding-left: 12rem;
 }
 
 .email {
@@ -453,8 +452,9 @@ section {
 .contact-img {
     width: 90%;
     height: 38rem;
+    margin: 0 auto;
     align-self: center;
-    margin-top: 5rem;
+    margin-top: 2rem;
     img {
         width: 100%;
         height: 100%;
@@ -467,8 +467,6 @@ section {
     flex-direction: column;
     align-items: flex-start;
     width: 50%;
-    padding: 1rem;
-    padding-right: 10rem;
 }
 
 .search-form {
@@ -531,18 +529,11 @@ footer {
     .about, .events, .members {
         flex-direction: column;
         align-items: center;
-        padding: 1rem;
         margin: 0;
     }
-
-    .about .info, .about-logo, .event-img, .event-info, .members-info, .members-img {
-        width: 100%;
-        max-width: 100%;
-        margin-bottom: 2rem;
-    }
-
     .about .info {
         flex-basis: auto;
+        width: 25%
     }
 
     .desktop {
@@ -553,3 +544,4 @@ footer {
         display: flex; /* Show hamburger menu */
     }
 }
+
